# Text-Summarizer

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_transformation.ipynb  3_model_trainer.ipynb  4_model_evaluation.ipynb  text_summarizer.ipynb
src/text_summarizer/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/text_summarizer/config/: configuration.py
src/text_summarizer/entity/: __init__.py
src/text_summarizer/logging/: __init__.py
src/text_summarizer/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py  prediction_pipeline.py
src/text_summarizer/utils/: common.py
