[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.4",
    "datasets>=4.4.1",
    "ensure==1.0.2",
    "evaluate>=0.4.6",
    "fastapi==0.78.0",
    "jinja2==3.1.2",
    "matplotlib>=3.10.7",
    "mypy-boto3-s3>=1.42.3",
    "nltk>=3.9.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "py7zr>=1.0.0",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.57.3",
    "uvicorn==0.18.3",
]
